apps/arr-stack/jellyfin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-web
  namespace: jellyfin
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: web
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-local-discovery
  namespace: jellyfin
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: jellyfin
  ports:
    - name: local-discovery
      port: 7359
      targetPort: local-discovery
    - name: dlna
      port: 1900
      targetPort: dlna
  type: LoadBalancer
